<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".view.Home">

    <TextView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"

        android:text="@string/h_menu" />

    <LinearLayout
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu">

        <Button
            android:id="@+id/article"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_articles" />

        <Button
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_users" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_1">

        <Button
            android:id="@+id/competition"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_compet" />

        <Button
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_results" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_2">

        <Button
            android:id="@+id/connect"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_connect" />

        <Button
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_weight="50"
            android:onClick="onClick"
            android:text="@string/h_about" />
    </LinearLayout>
</RelativeLayout>
