<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.competition.result.ViewResult">

    <TextView
        android:id="@+id/idCompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:text="0" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:text="Competition" />

    <LinearLayout
        android:id="@+id/ladder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name">

        <TextView
            android:id="@+id/place"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/r_place"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/judoka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/r_judoka" />

        <TextView
            android:id="@+id/fights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judoka"
            android:layout_weight="1"
            android:text="@string/r_fights"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judoka"
            android:layout_weight="1"
            android:text="@string/r_wins"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/looses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judoka"
            android:layout_weight="1"
            android:text="@string/r_looses"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judoka"
            android:layout_weight="1"
            android:text="@string/r_points"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/ladderData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ladder"></ListView>
</RelativeLayout>
